Fixed ranking question jumping when selecting the last item

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -641,7 +641,6 @@ div.img-wrap.selected {
 	.rank-answers-list {
 		display: inline-block;
         padding-left: 0;
-        height: 100% !important;
         position: relative;
         background-color: #ececec;
         padding: 5px;
