--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -1423,7 +1423,6 @@ a.boxes-icon-split:hover, a.boxes-icon-2:hover, a.picture-3:hover {
         ul.rank-answers-list {
             display: inline-block;
             padding-left: 0;
-            height: 100% !important;
             position: relative;
             top: 0px !important;
             margin-left: 48px;
